# pyling

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: conformance.yml  python-app.yml
examples/: deep-taxonomy-10000.n3  socrates.n3
pyling/: __init__.py  builtins.py  cli.py  engine.py  parser.py  printing.py  rdf.py  store.py  terms.py
spec/: parse.py  parser.cjs
tests/: test_conformance_hooks.py  test_rdf_compat.py  test_reasoning.py
tools/: run_notation3tests.py  run_rdf12_w3c.py
